theia/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: theia
  labels:
    app.kubernetes.io/instance: theia
    istio.io/rev: asm-1124-1
    kubernetes.io/metadata.name: theia
