theia/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: theia
spec:
  ports:
  - port: 8443
    targetPort:3000
  selector:
    app: theia
